--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@ return false;
             <li><a href="Destinations.html">Destinations</a></li>
             <li><a href="Options.html">Tour Packages</a></li>
             <li><a href="planning.html">Plan your Trip</a></li>
-	    <li><a href="https://www.sltda.gov.lk/en/tourism-news">Tourism News</a></li>
+	    <li><a href="News.html">Tourism News</a></li>
             <li><a href="About.html">Reviews  &  About us</a></li>
         </ul>
     </nav>
